# 42CPP

./: .gitignore  README.md  cpp_init.sh
CPP00/ex00/: Makefile  megaphone  megaphone.cpp
CPP00/ex01/: Contact.class.cpp  Contact.class.hpp  Makefile  PhoneBook.class.cpp  PhoneBook.class.hpp  colors.h  includes.h  main.cpp
CPP00/ex02/: Account.cpp
CPP01/: Makefile  Zombie.cpp  Zombie.h  Zombie.hpp  main.cpp
CPP01/ex00/: Makefile  Zombie.cpp  Zombie.hpp  main.cpp  newZombie.cpp  randomChump.cpp  zombie
CPP01/ex01/: Makefile  Zombie.cpp  Zombie.hpp  dio  main.cpp  zombieHorde.cpp
CPP01/ex02/: Makefile  main.cpp
CPP01/ex03/: HumanA.cpp  HumanA.hpp  HumanB.cpp  HumanB.hpp  Makefile  Weapon.cpp  Weapon.hpp  main.cpp
CPP01/ex04/: Makefile  main.cpp
CPP01/ex05/: Harl.cpp  Harl.hpp  Makefile  main.cpp
CPP01/ex06/: Harl.cpp  main.cpp
CPP02/ex00/: Fixed.cpp  Fixed.hpp  Makefile  main.cpp  rules.txt
CPP02/ex01/: Fixed.cpp  Fixed.hpp  Makefile  main.cpp
CPP02/ex02/: Fixed.cpp  Fixed.hpp  Makefile  ex02  main.cpp
CPP03/ex00/: ClapTrap.cpp  ClapTrap.hpp  Makefile  main.cpp
CPP03/ex01/: ClapTrap.hpp  Makefile  ScavTrap.cpp  ScavTrap.hpp  main.cpp
CPP03/ex02/: ClapTrap.cpp  ClapTrap.hpp  FragTrap.cpp  FragTrap.hpp  Makefile  ScavTrap.cpp  ScavTrap.hpp  main.cpp
CPP04/ex00/: Animal.cpp  Animal.hpp  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp  Makefile  WrongAnimal.hpp  WrongCat.cpp  WrongCat.hpp  WrongDog.cpp  WrongDog.hpp  ex00  main.cpp
ex00/: Bureaucrat.cpp  Bureaucrat.hpp
ex01/: Bureaucrat.cpp  Bureaucrat.hpp  CMakeLists.txt  Form.cpp  Form.hpp
(+131 files in other folders)
